ensure winId() not called on non-native widgets

Summary:
if we do that, window will be corrupted

BUG: 412675

Test Plan: Use Kate, change color theme on a second screen with scaling

Reviewers: #frameworks, dfaure

Reviewed By: dfaure

Subscribers: broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D24442

(cherry picked from commit 93c19fbfa125b802ef24e687b81063cf88417fbe)